# Cement

./: .gitignore  Cargo.toml  LICENSE  README.md
Scripts/: test.cmt
src/: context.rs  env.rs  error.rs  lib.rs  main.rs  test.rs  utils.rs  values.rs
src/ast/: callable.rs  macrodef.rs  mod.rs
src/context/: default.rs  display.rs  find_name.rs  find_symbol.rs  get_name.rs  logic_path.rs  mod.rs  partial_eq.rs
src/evalution/: context.rs  eval.rs  funcall.rs  mod.rs
src/frontend/: grammar.pest  mod.rs  parse.rs
src/interpreter/: evaluator.rs  mod.rs  values.rs
src/partial_evaluation/: call.rs  mod.rs
src/preprocess/: loading.rs  loading_use_match_temp.rs  match_template.rs  mod.rs  sexpr_parser.rs  symbols.rs
src/preprocesser/: macrodef.rs  mod.rs
src/runtime/: mod.rs  value.rs
src/syntax/: grammar.pest  mod.rs  parser.rs  sexpr.rs  utils.rs  values.rs
src/type_infer/: mod.rs  types.rs
