[package]
name = "cement"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

[[bin]]
name = "c0i"
path = "src/main.rs"


# [lib]
# name = "c0lib"
# path = "src/lib.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
sexpr_ir = "^0.5.*"
sexpr_process = "^0.1.1"
# lazy_static = "1.4.0"
# multimap = "0.8.2"
